--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,37 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".Menu">
 
-    <ImageView
-        android:id="@+id/menu_img_logo"
-        android:layout_width="309dp"
-        android:layout_height="286dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menu_img_apptitle"
-        app:srcCompat="@android:drawable/ic_menu_gallery" />
-
-    <ImageView
-        android:id="@+id/menu_img_apptitle"
-        android:layout_width="284dp"
-        android:layout_height="144dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_gallery" />
-
     <Button
         android:id="@+id/menu_btn_logIn"
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:layout_marginStart="22dp"
-        android:layout_marginTop="30dp"
-        android:textStyle="bold"
-        android:text="@string/menu_login"
         android:backgroundTint="@color/blue_botton"
+        android:text="@string/menu_login"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menu_img_logo" />
+        tools:layout_editor_absoluteY="530dp" />
 
     <Button
         android:id="@+id/menu_btn_signUp"
@@ -49,4 +28,15 @@
         android:text="@string/menu_sign_up"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_btn_logIn" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="320dp"
+        android:layout_height="320dp"
+        app:layout_constraintBottom_toTopOf="@+id/menu_btn_logIn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/menu_logo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
