--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -30,13 +30,13 @@
         app:layout_constraintTop_toBottomOf="@+id/menu_btn_logIn" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="320dp"
-        android:layout_height="320dp"
+        android:id="@+id/logoMenu"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
         app:layout_constraintBottom_toTopOf="@+id/menu_btn_logIn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/menu_logo" />
+        app:srcCompat="@drawable/menu_img_logo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
