--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,22 +10,23 @@
         android:id="@+id/menu_btn_logIn"
         android:layout_width="340dp"
         android:layout_height="50dp"
-        android:layout_marginStart="22dp"
+        android:layout_marginTop="512dp"
         android:backgroundTint="@color/blue_botton"
         android:text="@string/menu_login"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="530dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/menu_btn_signUp"
         android:layout_width="330dp"
         android:layout_height="50dp"
-        android:layout_marginStart="22dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/button_borderblue"
-        android:textColor="@color/blue_botton"
         android:text="@string/menu_sign_up"
+        android:textColor="@color/blue_botton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_btn_logIn" />
 
