--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,18 +23,18 @@
 
     <EditText
         android:id="@+id/sign_up_editText_username"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="@color/white"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginStart="22dp"
         android:layout_marginTop="41dp"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:hint="@string/sign_up_user_name_ph"
+        android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/sign_up_user_name_ph"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_txt_title" />
 
@@ -42,16 +42,16 @@
         android:id="@+id/sign_up_editText_email"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginStart="22dp"
         android:layout_marginTop="35dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:ems="10"
-        android:inputType="textEmailAddress"
         android:hint="@string/sign_up_email_ph"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="20dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15dp"
-        android:paddingLeft="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_username" />
 
@@ -59,16 +59,16 @@
         android:id="@+id/sign_up_editText_password"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginStart="22dp"
         android:layout_marginTop="35dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:ems="10"
-        android:inputType="textPassword"
         android:hint="@string/sign_up_password_ph"
+        android:inputType="textPassword"
+        android:paddingLeft="20dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15dp"
-        android:paddingLeft="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_email" />
 
@@ -76,16 +76,16 @@
         android:id="@+id/sign_up_editText_passwordConfirmation"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginStart="22dp"
         android:layout_marginTop="35dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:ems="10"
+        android:hint="@string/sign_up_password_confirmation_ph"
         android:inputType="textPassword"
         android:paddingLeft="20dp"
-        android:hint="@string/sign_up_password_confirmation_ph"
         android:textColor="@color/grey_placeholders"
         android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_password" />
 
@@ -94,12 +94,12 @@
         android:id="@+id/sign_up_numPicker_age"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginStart="22dp"
         android:layout_marginTop="35dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:paddingLeft="20dp"
         android:scrollbarSize="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_passwordConfirmation" />
 
@@ -107,8 +107,8 @@
         android:id="@+id/textInputLayout2"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
         android:layout_marginTop="35dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_numPicker_age">
 
@@ -117,10 +117,10 @@
             android:layout_width="340dp"
             android:layout_height="48dp"
             android:layout_weight="1"
-            android:inputType="none"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/white"
             android:hint="@string/sign_up_profession_ph"
+            android:inputType="none"
             android:textColor="@color/grey_placeholders"
             android:textSize="15dp" />
 
@@ -131,11 +131,14 @@
         android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/sign_up_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
