--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -11,11 +11,12 @@
         android:id="@+id/log_in_txt_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="116dp"
         android:text="@string/log_in_email"
         android:textColor="@color/grey_letters"
         android:textSize="17dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.187"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,46 +24,47 @@
         android:id="@+id/log_in_editText_email"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/white"
         android:ems="10"
-        android:inputType="textEmailAddress"
         android:hint="@string/log_in_email_ph"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="15dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15dp"
-        android:paddingLeft="15dp"
-        android:backgroundTint="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/log_in_txt_email"
         app:layout_constraintTop_toBottomOf="@+id/log_in_txt_email" />
 
     <TextView
         android:id="@+id/log_in_txt_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="52dp"
         android:text="@string/login_password"
         android:textColor="@color/grey_letters"
         android:textSize="17dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/log_in_txt_email"
         app:layout_constraintTop_toBottomOf="@+id/log_in_editText_email" />
 
     <EditText
         android:id="@+id/log_in_editText_password"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/white"
         android:ems="10"
-        android:inputType="textPassword"
         android:hint="@string/log_in_password_ph"
+        android:inputType="textPassword"
+        android:paddingLeft="15dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15dp"
-        android:paddingLeft="15dp"
-        android:backgroundTint="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/log_in_editText_email"
         app:layout_constraintTop_toBottomOf="@+id/log_in_txt_password" />
 
     <TextView
@@ -81,7 +83,7 @@
     <CheckBox
         android:id="@+id/log_in_chkBox_remember"
         android:layout_width="wrap_content"
-        android:layout_height="47dp"
+        android:layout_height="48dp"
         android:layout_marginTop="28dp"
         android:hint="@string/log_in_remember"
         android:textColor="@color/purple"
