--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--ketzalli
-no implementada-->
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+contiene el contenido individual de cada recyclerview-->
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_margin="12dp"
-    card_view:cardBackgroundColor="#CACACA"
-    card_view:cardCornerRadius="20dp"
-    card_view:cardElevation="6dp"
-    card_view:contentPadding="4dp">
+    android:layout_margin="12dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="559dp"
+        android:layout_height="match_parent"
+        android:background="#F2F1F1"
         android:padding="16dp">
 
         <TextView
@@ -25,39 +21,37 @@ no implementada-->
             android:layout_marginTop="13dp"
             android:layout_marginEnd="13dp"
             android:layout_marginBottom="13dp"
+            android:fontFamily="@font/roboto"
             android:text="pregunta"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="#555555"
-            android:textSize="15dp">
-<!--            android:fontFamily="@font/roboto"-->
-        </TextView>
+            android:textSize="15dp" />
 
-        <!--<ImageView
+        <ImageView
             android:id="@+id/imagen"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_below="@+id/pregunta"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_marginStart="13dp"
             android:layout_marginLeft="29dp"
-            android:layout_marginTop="56dp"
             android:layout_marginEnd="13dp"
             android:layout_marginRight="29dp"
             android:layout_marginBottom="13dp"
-            android:src="@drawable/imgprueba" />-->
+            android:src="@drawable/imgprueba" />
 
         <Button
             android:id="@+id/boton1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pregunta"
+            android:layout_below="@+id/imagen"
             android:layout_marginLeft="13dp"
-            android:layout_marginTop="55dp"
             android:layout_marginRight="13dp"
             android:backgroundTint="#F66732"
-            android:text="opcion 1" />
+            android:text="opcion 1"
+            app:cornerRadius="16px" />
 
         <Button
             android:id="@+id/boton3"
@@ -68,7 +62,8 @@ no implementada-->
             android:layout_marginTop="5dp"
             android:layout_marginRight="13dp"
             android:backgroundTint="#F66732"
-            android:text="opcion 3" />
+            android:text="opcion 3"
+            app:cornerRadius="16px" />
 
         <Button
             android:id="@+id/boton2"
@@ -79,22 +74,9 @@ no implementada-->
             android:layout_marginTop="4dp"
             android:layout_marginRight="13dp"
             android:backgroundTint="#F66732"
-            android:text="opcion 2" />
-
-        <Button
-            android:id="@+id/addButton"
-            android:layout_width="203dp"
-            android:layout_height="46dp"
-            android:layout_below="@+id/boton3"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="114dp"
-            android:layout_marginTop="188dp"
-            android:layout_marginEnd="46dp"
-            android:layout_marginBottom="40dp"
-            android:text="Actualizar" />
+            android:text="opcion 2"
+            app:cornerRadius="16px" />
 
     </RelativeLayout>
 
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
