--- a/app/src/main/res/layout/activity_base_question.xml
+++ b/app/src/main/res/layout/activity_base_question.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--ketzalli
-esta sustituye a question, es la que muestra el recyclerview
-no implementada-->
+contiene el recyclerview de las preguntas-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".BaseQuestion">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
