--- a/app/src/main/res/layout/activity_resultado.xml
+++ b/app/src/main/res/layout/activity_resultado.xml
@@ -1,66 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--ketzalli-->
-<com.google.android.material.card.MaterialCardView android:id="@+id/card"
+<!--ketzalli
+muestra que se ha entregado una insignia-->
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent"
+    android:layout_margin="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/teal_200">
+        android:layout_height="match_parent"
+        android:background="#F2F1F1"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="16dp">
 
-            <!-- Title, secondary and supporting text -->
             <TextView
                 android:id="@+id/titulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Felicidades"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/bowlby_one"
+                android:text="¡FELICIDADES!"
                 android:textAlignment="center"
-                android:textAppearance="?attr/textAppearanceHeadline6"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="#663399"
+                android:textSize="35dp" />
 
-            <!-- Media -->
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                app:srcCompat="@drawable/sexual_education"
+                android:layout_marginBottom="10dp"
                 android:scaleType="centerInside"
-                />
+                app:srcCompat="@drawable/sexual_education" />
 
             <TextView
                 android:id="@+id/pregunta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="acabas de desbloquear la insignia bla bla bla"
+                android:text="Has desbloqueado la insignia de Educacion Sexual.\n Sigue jugando para desbloquear más insignias."
+                android:textAlignment="center"
                 android:textAppearance="?attr/textAppearanceBody2"
                 android:textColor="?android:attr/textColorSecondary"
-                />
+                android:textSize="20dp" />
 
-        </LinearLayout>
-
-        <!-- Buttons -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:orientation="vertical">
             <Button
                 android:id="@+id/continuar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="continuar"
-                />
+                android:layout_marginTop="20dp"
+                android:text="continuar" />
+
         </LinearLayout>
 
     </LinearLayout>
