--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -36,11 +36,11 @@
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/ic_baseline_local_hospital_24"
         app:layout_constraintBottom_toBottomOf="@+id/progressPogressBar"
         app:layout_constraintEnd_toEndOf="@+id/progressPogressBar"
         app:layout_constraintStart_toStartOf="@+id/progressPogressBar"
         app:layout_constraintTop_toTopOf="@+id/progressPogressBar" />
+<!--        android:src="@drawable/ic_baseline_local_hospital_24"-->
 
     <TextView
         android:id="@+id/textView5"
