--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -39,6 +39,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="64dp"
         android:text="Sigue aprendiendo, Nombre"
+        android:onClick="progreso"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listaCategorias"
