--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -37,19 +37,32 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="80dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="64dp"
-        android:text="Sigue aprendiendo, Nombre"
         android:onClick="progreso"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Sigue aprendiendo, Nombre"
+        app:layout_constraintBottom_toBottomOf="@+id/CategoriesProgressBar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listaCategorias"
-        app:layout_constraintVertical_bias="0.596" />
+        app:layout_constraintTop_toTopOf="@+id/CategoriesProgressBar"
+        app:layout_constraintVertical_bias="0.483" />
+
+    <TextView
+        android:id="@+id/progressPercentage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+        android:text="100%"
+        android:textColor="#663399"
+        android:onClick="progreso"
+        app:layout_constraintBottom_toBottomOf="@+id/CategoriesProgressBar"
+        app:layout_constraintEnd_toEndOf="@+id/CategoriesProgressBar"
+        app:layout_constraintStart_toStartOf="@+id/CategoriesProgressBar"
+        app:layout_constraintTop_toTopOf="@+id/CategoriesProgressBar"
+        tools:ignore="OnClick" />
 
     <ProgressBar
         android:id="@+id/CategoriesProgressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="40dp"
-        android:layout_height="38dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:indeterminateOnly="false"
         android:max="100"
         android:progress="0"
@@ -60,15 +73,5 @@
         app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toEndOf="@+id/textView3" />
 
-    <TextView
-        android:id="@+id/progressPercentage"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:textColor="#663399"
-        android:onClick="progreso"
-        app:layout_constraintBottom_toBottomOf="@+id/CategoriesProgressBar"
-        app:layout_constraintEnd_toEndOf="@+id/CategoriesProgressBar"
-        app:layout_constraintStart_toStartOf="@+id/CategoriesProgressBar"
-        app:layout_constraintTop_toTopOf="@+id/CategoriesProgressBar"
-        tools:ignore="OnClick" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
