Colocando en carpetas

--- a/app/src/main/res/layout/activity_base_question.xml
+++ b/app/src/main/res/layout/activity_base_question.xml
@@ -6,7 +6,7 @@ contiene el recyclerview de las preguntas-->
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BaseQuestion">
+    tools:context="org.bedu.okayapp.Trivia.BaseQuestion">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
