--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,16 +14,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-        <!--android:src="@drawable/ic_launcher_background"-->
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/user_icon"/>
+
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/profile_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
-        android:text="Tomar fotografía"
+        android:text="@string/profile_button"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -31,12 +32,12 @@
         app:layout_constraintTop_toBottomOf="@+id/profile_imageView" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/profile_txtView_userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:text="Nombre del usuario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
