Agregué iconos para categorías a los drawable y modifiqué layout text

--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Elige una categoría..."
-        android:textColor="#663399"
-        android:textSize="16dp"
+        android:textColor="@color/yolo_blue"
+        android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -36,9 +36,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="80dp"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="48dp"
         android:onClick="progreso"
         android:text="Sigue aprendiendo, Nombre"
+        android:textColor="@color/yolo_orange"
+        android:textSize="16dp"
+        android:textStyle="bold"
+
         app:layout_constraintBottom_toBottomOf="@+id/CategoriesProgressBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/CategoriesProgressBar"
@@ -61,8 +65,8 @@
     <ProgressBar
         android:id="@+id/CategoriesProgressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:indeterminateOnly="false"
         android:max="100"
         android:progress="0"
