--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -39,27 +39,27 @@
         app:layout_constraintBottom_toBottomOf="@+id/progressPogressBar"
         app:layout_constraintEnd_toEndOf="@+id/progressPogressBar"
         app:layout_constraintStart_toStartOf="@+id/progressPogressBar"
-        app:layout_constraintTop_toTopOf="@+id/progressPogressBar" />
-<!--        android:src="@drawable/ic_baseline_local_hospital_24"-->
+        app:layout_constraintTop_toTopOf="@+id/progressPogressBar"
+        android:src="@drawable/sex_education"/>
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="456dp"
+        android:layout_marginBottom="396dp"
         android:text="Metodos anticonceptivos"
         android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressPogressBar2"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="112dp"
         android:background="@color/yolo_purple"
         android:indeterminateOnly="false"
         android:max="100"
@@ -73,8 +73,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="108dp"
-        android:text="Biologia reproductiva"
+        android:text="Biología reproductiva"
         android:textSize="12dp"
+        android:textStyle="bold"
+        android:textColor="@color/yolo_purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/progressPogressBar2"
         app:layout_constraintHorizontal_bias="0.457"
