--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -48,9 +48,11 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="396dp"
+        android:layout_marginBottom="368dp"
         android:text="Metodos anticonceptivos"
+        android:textColor="@color/yolo_orange"
         android:textSize="12dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -105,7 +107,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Enfermedades de"
-        android:textSize="12dp"
+        android:textSize="12sp"
+        android:textColor="@color/yolo_yellow"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/progressPogressBar3"
         app:layout_constraintHorizontal_bias="0.4"
@@ -117,8 +121,10 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="trasmicion sexual"
-        android:textSize="12dp"
+        android:text="transmisión sexual"
+        android:textSize="12sp"
+        android:textColor="@color/yolo_yellow"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -138,5 +144,25 @@
         app:layout_constraintHorizontal_bias="0.162"
         app:layout_constraintStart_toEndOf="@+id/progressPogressBar3"
         app:layout_constraintTop_toTopOf="@+id/progressPogressBar3" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="45dp"
+        android:layout_height="48dp"
+        app:layout_constraintBottom_toBottomOf="@+id/progressPogressBar3"
+        app:layout_constraintEnd_toEndOf="@+id/progressPogressBar3"
+        app:layout_constraintStart_toStartOf="@+id/progressPogressBar3"
+        app:layout_constraintTop_toTopOf="@+id/progressPogressBar3"
+        app:srcCompat="@drawable/std" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="50dp"
+        android:layout_height="55dp"
+        app:layout_constraintBottom_toBottomOf="@+id/progressPogressBar2"
+        app:layout_constraintEnd_toEndOf="@+id/progressPogressBar2"
+        app:layout_constraintStart_toStartOf="@+id/progressPogressBar2"
+        app:layout_constraintTop_toTopOf="@+id/progressPogressBar2"
+        app:srcCompat="@drawable/biology" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
