Correción botón continuar
Se declara el botón de Continuar de la pantalla de sign_up

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/log_in_txt_forgot" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/sign_up_btn_logIn"
+        android:id="@+id/log_in_btn_logIn"
         android:layout_width="316dp"
         android:layout_height="64dp"
         android:layout_marginTop="92dp"
